# disallow-privileged-policy

./: .gitignore  Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  metadata.yml
.github/workflows/: release.yml
src/: lib.rs  settings.rs
test_data/: cronjob_creation.json  cronjob_v1_creation.json  deployment_creation.json  pod_creation_without_privileged.json  replicaset_creation.json
