[package]
name = "disallow-privileged-policy"
version = "1.0.0"
authors = ["shilazi <nilprobe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "=0.16.0", default-features = false, features = ["v1_21"] }
kubewarden-policy-sdk = "=0.8.6"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
regex = "1.10.5"
once_cell = "1.19.0"
anyhow = "1.0"
